--- a/index.html
+++ b/index.html
@@ -9,22 +9,30 @@
 <body>
     <div id="container">
         <div id="navbar">
-            <div id="element-background">
+            <div class="navbar-box" style="background-color:#ECF2FE;">
                 <img src="element-4.png" alt="Element" class="icon">
             </div>
-            <img src="graph.png" alt="Graph" class="icon">
-            <img src="medal-star.png" alt="Medal Star" class="icon">
-            <img src="messages.png" alt="Messages" class="icon">
-            <img src="setting-2.png" alt="Setting" class="icon">
+            <div class="navbar-box">
+                <img src="graph.png" alt="Graph" class="icon">
+            </div>
+            <div class="navbar-box">
+                <img src="medal-star.png" alt="Medal Star" class="icon">
+            </div>
+            <div class="navbar-box">
+                <img src="messages.png" alt="Messages" class="icon">
+            </div>
+            <div class="navbar-box">
+                <img src="setting-2.png" alt="Setting" class="icon">
+            </div>
         </div>
         <div id="main">
             <div id="header">
                 <div id="left-header">
-                    <p style="font-size: 24px; font-weight: 500; color: #3E435D;">Welcome, Amanda</p>
-                    <p style="font-size: 16px; font-weight: 400; color: #ADA7A7;">Tue, 07 June 2022</p>
+                    <p style="font-size: 24px; font-weight: 600;" class="dark-text">Welcome, Amanda</p>
+                    <p class="gray-text">Tue, 07 June 2022</p>
                 </div>
                 <div id="right-header">
-                    <div id="search">
+                    <div id="search" class="gray-text">
                         <img src="search-normal.png" alt="Search" class="icon"> Search
                     </div>
                     <div id="notification">
@@ -42,8 +50,8 @@
                         <div id="alexa-name">
                             <img src="alexa-avatar.png" alt="Alexa" width="100" height="100">
                             <div id="name">
-                                <p style="font-size: 20px; font-weight: 500; color: #000000;">Alexa Rawles</p>
-                                <p style="font-size: 16px; font-weight: 400; color: #ADA7A7;">alexarawles@gmail.com</p>
+                                <p style="font-size: 20px; font-weight: 600;" class="dark-text">Alexa Rawles</p>
+                                <p class="gray-text">alexarawles@gmail.com</p>
                             </div>
                         </div>
                         <div id="edit-button">
@@ -51,56 +59,56 @@
                         </div>
                     </div>
                     <div id="alexa-information">
-                        <div class="input-box">
+                        <div class="input-box dark-text">
                             Full Name
-                            <div class="select-box">
+                            <div class="select-box gray-text">
                                 Your First Name
                                 <img src="dropDown_icon.png" alt="Drop down" class="icon">
                             </div>
                         </div>
-                        <div class="input-box">
+                        <div class="input-box dark-text">
                             Nick Name
-                            <div class="select-box">
+                            <div class="select-box gray-text">
                                 Your Nick Name
                                 <img src="dropDown_icon.png" alt="Drop down" class="icon">
                             </div>
                         </div>
-                        <div class="input-box">
+                        <div class="input-box dark-text">
                             Gender
-                            <div class="select-box">
+                            <div class="select-box gray-text">
                                 Your Gender
                                 <img src="dropDown_icon.png" alt="Drop down" class="icon">
                             </div>
                         </div>
-                        <div class="input-box">
+                        <div class="input-box dark-text">
                             Country
-                            <div class="select-box">
+                            <div class="select-box gray-text">
                                 Your Country
                                 <img src="dropDown_icon.png" alt="Drop down" class="icon">
                             </div>
                         </div>
-                        <div class="input-box">
+                        <div class="input-box dark-text">
                             Language
-                            <div class="select-box">
+                            <div class="select-box gray-text">
                                 Your Language
                                 <img src="dropDown_icon.png" alt="Drop down" class="icon">
                             </div>
                         </div>
-                        <div class="input-box">
+                        <div class="input-box dark-text">
                             Time Zone
-                            <div class="select-box">
+                            <div class="select-box gray-text">
                                 Your Time Zone
                                 <img src="dropDown_icon.png" alt="Drop down" class="icon">
                             </div>
                         </div>
                     </div>
                     <div id="alexa-contact">
-                        <p style="font-size: 18px; font-weight: 500; color: #000000;">My email Address</p>
+                        <p style="font-size: 18px; font-weight: 600;" class="dark-text">My email Address</p>
                         <div id="alexa-email">
-                            <img src="email.png" alt="Email">
+                            <img src="email.png" alt="Email" width="48" height="48">
                             <div id="email-address">
-                                <p style="font-size: 16px; font-weight: 400; color: #000000;">alexarawles@gmail.com</p>
-                                <p style="font-size: 16px; font-weight: 400; color: #ADA7A7;">1 month ago</p>
+                                <p style="font-size: 16px; font-weight: 400; color: #3E435D;">alexarawles@gmail.com</p>
+                                <p class="gray-text">1 month ago</p>
                             </div>
                         </div>
                         <div id="add-email">
