--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">    
     <title>Amanda</title>
 </head>
 <body>
@@ -28,7 +29,7 @@
         <div id="main">
             <div id="header">
                 <div id="left-header">
-                    <p style="font-size: 24px; font-weight: 600;" class="dark-text">Welcome, Amanda</p>
+                    <p style="font-size: 24px; font-weight: 500;" class="dark-text">Welcome, Amanda</p>
                     <p class="gray-text">Tue, 07 June 2022</p>
                 </div>
                 <div id="right-header">
@@ -48,7 +49,7 @@
                         <div id="alexa-name">
                             <img src="alexa-avatar.png" alt="Alexa" width="100" height="100">
                             <div id="name">
-                                <p style="font-size: 20px; font-weight: 600;" class="dark-text">Alexa Rawles</p>
+                                <p style="font-size: 20px; font-weight: 500;" class="dark-text">Alexa Rawles</p>
                                 <p class="gray-text">alexarawles@gmail.com</p>
                             </div>
                         </div>
@@ -101,7 +102,7 @@
                         </div>
                     </div>
                     <div id="alexa-contact">
-                        <p style="font-size: 18px; font-weight: 600;" class="dark-text">My email Address</p>
+                        <p style="font-size: 18px; font-weight: 500;" class="dark-text">My email Address</p>
                         <div id="alexa-email">
                             <img src="email.png" alt="Email" width="48" height="48">
                             <div id="email-address">
