--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div id="notification">
                         <img src="notification-bing.png" alt="Notification" class="icon">
                     </div>
-                    <img src="avatar.png" alt="Avatar" width="52" height="52">
+                    <img src="avatar.png" alt="Avatar" style="width: 95%; max-width: 52px; height: 52px; border-radius: 10px;">
                 </div>
             </div>
             <div id="content-container">
