--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div id="content">
                     <div id="alexa-header">
                         <div id="alexa-name">
-                            <img src="alexa-avatar.png" alt="Alexa" width="100" height="100">
+                            <img src="alexa-avatar.png" alt="Alexa" style="width: 100px; height: 100px;">
                             <div id="name">
                                 <p style="font-size: 20px; font-weight: 500;" class="dark-text">Alexa Rawles</p>
                                 <p class="gray-text">alexarawles@gmail.com</p>
@@ -104,7 +104,7 @@
                     <div id="alexa-contact">
                         <p style="font-size: 18px; font-weight: 500;" class="dark-text">My email Address</p>
                         <div id="alexa-email">
-                            <img src="email.png" alt="Email" width="48" height="48">
+                            <img src="email.png" alt="Email" style="width: 48px; height: 48px;">
                             <div id="email-address">
                                 <p style="font-size: 16px; font-weight: 400; color: #3E435D;">alexarawles@gmail.com</p>
                                 <p class="gray-text">1 month ago</p>
