--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div id="content-container">
-                <img src="rectangle-6691.png" alt="Rectangle" style="width: 1282px; height: 100px;">
+                <img src="rectangle-6691.png" alt="Rectangle" style="height: 100px;">
                 <div id="content">
                     <div id="alexa-header">
                         <div id="alexa-name">
